# BoW_Bicocca_li

./: CMakeLists.txt  readfile.cpp  rgb.txt
demo/: demelift.cpp~  demo.cpp~  demo128.cpp~  demo64.cpp  demolift.cpp  demolift.cpp~
include/DBoW2/: DBoW2.h  DBoW2.h~  FBrief.h  FLift128.h  FLift128.h~  FORB.h  FSurf128.h  TemplatedVocabulary.h~
src/: FLift128.cpp  FLift128.cpp~  FORB.cpp  FSurf128.cpp  FSurf128.cpp~
